{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 200,
  "lineage": "3a325c36-0dbb-ab01-7585-3e45e20ae36b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b9a589195146a8f",
            "arn": "arn:aws:ec2:us-east-1:992382522951:instance/i-02c4b283927ddc4f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02c4b283927ddc4f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aacb52fbb8e8e4a",
            "private_dns": "ip-172-31-10-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.215",
            "public_dns": "ec2-44-199-215-217.compute-1.amazonaws.com",
            "public_ip": "44.199.215.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a81e82f491e5f46a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "fraud-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096f5ba280a024007",
            "tags": {
              "Name": "fraud-detection-server",
              "Project": "fraud-detection"
            },
            "tags_all": {
              "Name": "fraud-detection-server",
              "Project": "fraud-detection"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afdcabe930f4656c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.main",
            "module.s3.aws_s3_bucket.main",
            "module.s3.aws_s3_bucket_versioning.main",
            "module.s3.aws_s3_object.app_code",
            "module.s3.aws_s3_object.folders",
            "module.s3.aws_s3_object.fraud_model",
            "module.s3.aws_s3_object.generate_seed",
            "module.s3.aws_s3_object.retrain",
            "module.s3.aws_s3_object.seed_data",
            "module.s3.aws_s3_object.spark_stream"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382522951:security-group/sg-0afdcabe930f4656c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afdcabe930f4656c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fraud-ec2-sg",
            "name_prefix": "",
            "owner_id": "992382522951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d544afd1db35994"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.s3.aws_s3_bucket.main",
            "module.s3.aws_s3_bucket_versioning.main",
            "module.s3.aws_s3_object.app_code",
            "module.s3.aws_s3_object.folders",
            "module.s3.aws_s3_object.fraud_model",
            "module.s3.aws_s3_object.generate_seed",
            "module.s3.aws_s3_object.retrain",
            "module.s3.aws_s3_object.seed_data",
            "module.s3.aws_s3_object.spark_stream"
          ]
        }
      ]
    },
    {
      "module": "module.emr",
      "mode": "data",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382522951:security-group/sg-0a82515ecae78413e",
            "description": "Master group for Elastic MapReduce created on 2026-05-20T17:25:23.092Z",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "ElasticMapReduce-master"
                ]
              }
            ],
            "id": "sg-0a82515ecae78413e",
            "name": "ElasticMapReduce-master",
            "tags": {
              "for-use-with-amazon-emr-managed-policies": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d544afd1db35994"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}